# tg-balto

./: .gitignore  Cargo.toml  LICENSE  README.md  db.sqlite
crates/rabbit/: .gitignore  Cargo.toml  LICENSE
crates/rabbit/src/: consumer.rs  error.rs  lib.rs  sender.rs
res/locale/de/: chat.ftl  general.ftl  start.ftl
res/locale/en/: chat.ftl  employee.ftl  employer.ftl  general.ftl  reset.ftl  start.ftl
res/locale/it/: chat.ftl  employee.ftl  employer.ftl  general.ftl  reset.ftl  start.ftl
src/: locale.rs  main.rs  telegram.rs  user.rs
src/telegram/: command.rs  dialogue.rs  handler.rs
src/telegram/command/: help.rs  start.rs
src/telegram/dialogue/: employee.rs
src/telegram/handler/: callback.rs  employee.rs  help.rs  reset.rs  start.rs
