[package]
name = "tg-balto"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.0", features = ["macros", "throttle", "cache-me", "sqlite-storage"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
serde = "1.0.160"
thiserror = "1.0.40"
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
unic-langid = "0.9.0"
itertools = "0.10"
fluent = "0.16"
fluent-bundle = "0.15.2"
intl-memoizer = "0.5.1"