[package]
name = "tg-balto"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["crates/*"]

[dependencies]
rabbit = { path = "crates/rabbit" }
teloxide = { version = "0.12.0", features = ["macros", "throttle", "cache-me", "sqlite-storage"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.28.0", features = ["full"] }
async-global-executor = "2.3.1"
serde = "1.0.160"
serde_json = "1.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
unic-langid = "0.9.0"
itertools = "0.10"
fluent = "0.16"
fluent-bundle = "0.15.2"
intl-memoizer = "0.5.1"
base64 = "0.21.0"
futures-lite = "1.13.0"
uuid = "1.3.2"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }